# Prompt-Vault-Pro

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  seed_prompts.py
.claude/: settings.local.json
backend/: auth.py  database.py  main.py  pyproject.toml  requirements.txt
backend/models/: bundle.py  entry.py  project.py
backend/routers/: bundles.py  entries.py  imports.py  projects.py  search.py
backend/schemas/: bundle.py  common.py  entry.py  project.py
backend/services/: bundle_service.py  entry_service.py  import_service.py  search_service.py
backend/tests/: conftest.py  test_entries.py  test_health.py  test_imports.py
cli/: config.py  main.py  pyproject.toml
cli/commands/: add.py  bundle.py  export.py  search.py
docs/: api.md  architecture.md  cli.md  import.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  entries.ts  imports.ts  projects.ts
frontend/src/components/: EntryCard.tsx  EntryForm.tsx  ImportModal.tsx
frontend/src/hooks/: useEntries.ts  useProjects.ts
frontend/src/pages/: EntriesPage.tsx  ResourcesPage.tsx
