[project]
name = "promptvaultpro"
version = "0.1.0"
description = "AI Prompt & Snippet Library with Project Binding"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["backend", "cli"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
