[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptvault-cli"
version = "0.1.0"
description = "CLI for PromptVaultPro"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
pv = "main:app"
